@startuml

title __CONTROLLER's Class Diagram__\n

  namespace de.shimunmatic.informationhub {
    namespace controller {
      class de.shimunmatic.informationhub.controller.CountryStateController {
          {static} - log : Logger
          + CountryStateController()
          + forceEvictCache()
          + getAll()
          + getAllForCountry()
          + getAllForProcessedDate()
          + getAllForWorld()
          + getAllForWorldOnProcessedDate()
          + getCountryAndDate()
          + getCountryNames()
      }
    }
  }
  

  namespace de.shimunmatic.informationhub {
    namespace controller {
      class de.shimunmatic.informationhub.controller.ProcessedDateController {
          + ProcessedDateController()
          + getAll()
      }
    }
  }
  

  de.shimunmatic.informationhub.controller.CountryStateController o-- de.shimunmatic.informationhub.service.definition.CountryStateService : countryStateService
  de.shimunmatic.informationhub.controller.ProcessedDateController o-- de.shimunmatic.informationhub.service.definition.ProcessedDateService : processedDateService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
